--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="styles/owl.transitions.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="styles/custom.css">
+
+    <!-- Bootstrap Tour -->
+    <link rel="stylesheet" href="styles/bootstrap-tour.min.css">
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -72,5 +75,6 @@
     <script src="scripts/controllers/contact.js"></script>
     <!-- endbuild -->
     <script src="scripts/owl.carousel.min.js"></script>
+    <script src="scripts/bootstrap-tour.min.js"></script>
 </body>
 </html>
