--- a/app/index.html
+++ b/app/index.html
@@ -59,13 +59,12 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="scripts/angular.fitvids.js"></script>
-    <script src="scripts/ng-infinite-scroll.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -76,5 +75,7 @@
     <!-- endbuild -->
     <script src="scripts/owl.carousel.min.js"></script>
     <script src="scripts/bootstrap-tour.min.js"></script>
+    <script src="scripts/angular.fitvids.js"></script>
+    <script src="scripts/ng-infinite-scroll.min.js"></script>
 </body>
 </html>
