--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/newdeadline.css">
     <link rel="stylesheet" href="styles/quiz.css">
+    <link rel="stylesheet" href="styles/subtopic.css">
+    <link rel="stylesheet" href="styles/subject.css">
+    <link rel="stylesheet" href="styles/animation.css">
 
     <!-- endbuild -->
     <!-- Font Awesome -->
@@ -82,6 +85,9 @@
     <script src="bower_components/angular-validator/dist/angular-validator.js"></script>
     <script src="bower_components/angular-validator/dist/angular-validator-rules.js"></script>
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
+    <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
+    <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
+    <script src="bower_components/angular-pdf/dist/angular-pdf.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -95,11 +101,14 @@
     <script src="scripts/controllers/quiz.js"></script>
     <script src="scripts/controllers/newdeadline.js"></script>
     <script src="scripts/controllers/subject.js"></script>
+    <script src="scripts/controllers/subtopic.js"></script>
+    <script src="scripts/controllers/viewer.js"></script>
     <!-- endbuild -->
     <script src="scripts/owl.carousel.min.js"></script>
     <script src="scripts/bootstrap-tour.min.js"></script>
     <script src="scripts/angular.fitvids.js"></script>
     <script src="scripts/ng-infinite-scroll.min.js"></script>
     <script src="scripts/angular-multi-select.min.js"></script>
+    <script src="scripts/angular-round-progress-directive.js"></script>
 </body>
 </html>
