--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/css-toggle-switch/dist/toggle-switch.css" />
+    <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -25,6 +26,7 @@
     <link rel="stylesheet" href="styles/subtopic.css">
     <link rel="stylesheet" href="styles/subject.css">
     <link rel="stylesheet" href="styles/animation.css">
+    <link rel="stylesheet" href="styles/knowledge-tree.css">
 
     <!-- endbuild -->
     <!-- Font Awesome -->
@@ -42,6 +44,9 @@
     <!-- Chosen CSS and spinner -->
     <link rel="stylesheet" href="bower_components/chosen_v1.2.0/chosen.css">
     <link rel="stylesheet" href="bower_components/angular-chosen-localytics/chosen-spinner.css">
+
+    <!-- NV.D3 CSS -->
+    <link rel="stylesheet" href="styles/nv.d3.css"> 
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -88,10 +93,20 @@
     <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
     <script src="bower_components/angular-pdf/dist/angular-pdf.js"></script>
+    <script src="bower_components/hamsterjs/hamster.js"></script>
+    <script src="bower_components/angular-mousewheel/mousewheel.js"></script>
+    <script src="bower_components/kinetic-slider/dist/gilbox-kinetic-slider.js"></script>
+    <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
+    <script src="bower_components/angular-slick/dist/slick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- jQuery plugins -->
     <script src="bower_components/chosen_v1.2.0/chosen.jquery.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="scripts/nv.d3.min.js"></script>
+    <script src="scripts/owl.carousel.min.js"></script>
+    <script src="scripts/bootstrap-tour.min.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -104,11 +119,13 @@
     <script src="scripts/controllers/subtopic.js"></script>
     <script src="scripts/controllers/viewer.js"></script>
     <!-- endbuild -->
-    <script src="scripts/owl.carousel.min.js"></script>
-    <script src="scripts/bootstrap-tour.min.js"></script>
+    
+    <!-- Angular plugins -->
     <script src="scripts/angular.fitvids.js"></script>
     <script src="scripts/ng-infinite-scroll.min.js"></script>
     <script src="scripts/angular-multi-select.min.js"></script>
     <script src="scripts/angular-round-progress-directive.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
+    <script src="http://sparkalow.github.io/angular-count-to/js/angular-count-to.js"></script>
 </body>
 </html>
