--- a/app/index.html
+++ b/app/index.html
@@ -93,9 +93,7 @@
     <!-- endbuild -->
 
     <!-- jQuery plugins -->
-
-    <script src="bower_components/chosen_v1.2.0/chosen.jquery.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/nv.d3.min.js"></script>
@@ -117,7 +115,7 @@
     <!-- endbuild -->
 
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
-    <script src="http://sparkalow.github.io/angular-count-to/js/angular-count-to.js"></script>
+    <script src="//sparkalow.github.io/angular-count-to/js/angular-count-to.js"></script>
     
     <!-- Angular plugins -->
 </body>
