--- a/app/index.html
+++ b/app/index.html
@@ -92,10 +92,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- jQuery plugins -->
-    <script src="//d3js.org/d3.v3.min.js"></script>
-
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/d3.v3.min.js"></script>
     <script src="scripts/nv.d3.min.js"></script>
     <script src="scripts/owl.carousel.min.js"></script>
     <script src="scripts/bootstrap-tour.min.js"></script>
@@ -112,11 +110,8 @@
     <script src="scripts/ng-infinite-scroll.min.js"></script>
     <script src="scripts/angular-multi-select.min.js"></script>
     <script src="scripts/angular-round-progress-directive.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-0.11.0.js"></script>
+    <script src="scripts/angular-count-to.js"></script>
     <!-- endbuild -->
-
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
-    <script src="//sparkalow.github.io/angular-count-to/js/angular-count-to.js"></script>
-    
-    <!-- Angular plugins -->
 </body>
 </html>
