Fixed issues when using grunt build

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,8 @@
     <link rel="stylesheet" href="styles/nv.d3.css">
     <link rel="stylesheet" href="styles/angular-multi-select.css"> 
     <!-- endbuild -->
-    <!-- Font Awesome -->
+
+    <link rel="stylesheet" href="bower_components/chosen_v1.2.0/chosen.min.css" />
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -80,10 +81,6 @@
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-validator/dist/angular-validator.js"></script>
     <script src="bower_components/angular-validator/dist/angular-validator-rules.js"></script>
-    <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
-    <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
-    <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
-    <script src="bower_components/angular-pdf/dist/angular-pdf.js"></script>
     <script src="bower_components/hamsterjs/hamster.js"></script>
     <script src="bower_components/angular-mousewheel/mousewheel.js"></script>
     <script src="bower_components/kinetic-slider/dist/gilbox-kinetic-slider.js"></script>
@@ -91,6 +88,14 @@
     <script src="bower_components/angular-slick/dist/slick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="bower_components/pdfjs-dist/build/pdf.js"></script>
+    <script src="bower_components/pdfjs-dist/build/pdf.worker.js"></script>
+    <script src="bower_components/angular-pdf/dist/angular-pdf.js"></script>
+    <script src="bower_components/angular-pdf/dist/angular-pdf.js"></script>
+    <script src="bower_components/chosen_v1.2.0/chosen.jquery.min.js"></script>
+    <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
+
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/d3.v3.min.js"></script>
