--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="bower_components/kinetic-slider/dist/gilbox-kinetic-slider.js"></script>
     <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
     <script src="bower_components/angular-slick/dist/slick.js"></script>
+    <script src="bower_components/angular-disqus-api/src/disqusApi.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
