--- a/app/index.html
+++ b/app/index.html
@@ -50,14 +50,14 @@
 
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
       <script>
-         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-         ga('create', 'UA-XXXXX-X');
-         ga('send', 'pageview');
-     </script>
+       ga('create', 'UA-XXXXX-X');
+       ga('send', 'pageview');
+   </script>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -119,5 +119,10 @@
     <script src="scripts/ui-bootstrap-tpls-0.11.0.js"></script>
     <script src="scripts/angular-count-to.js"></script>
     <!-- endbuild -->
+
+    <script type="text/javascript">
+        var loop11_key = "1bcdc1b2292a0db2887dcfc9d7174e26f80f5356";
+        document.write(unescape("%3cscript src='//cdn.loop11.com/my/loop11.js' type='text/javascript'%3e%3c/script%3e"));
+    </script>
 </body>
 </html>
